- kopie aus Altprjekt

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="VWHgVT72PwW[WT:WIYTjO7K81=4j]GIUCVs>yoDYYf`SDW?61nZ/NScsMUe?IeC7"
+application.secret="6eWtCH3S`Vl=jJgS]HQZlXYw4fHS5`Q;PcMN^?>B?FeXQpy?K2gn_?3kbCK77QUq"
 
 # The application languages
 # ~~~~~
@@ -41,6 +41,11 @@ application.langs="en"
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
 
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/testapp?characterEncoding=UTF-8"
+db.default.user=root
+db.default.password=admin
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
@@ -51,7 +56,7 @@ application.langs="en"
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
 #
-# ebean.default="models.*"
+ebean.default="models.*"
 
 # Logger
 # ~~~~~
